--- a/template.yaml
+++ b/template.yaml
@@ -1,42 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
 Resources:
-  Websocket:
-    Type: AWS::ApiGatewayV2::Api
-    Properties:
-      Description: !Sub
-        - ${ResourceName} From Stack ${StackTagName} Environment ${EnvironmentTagName}
-        - ResourceName: Websocket
-      Name: !Sub
-        - ${StackTagName}-${EnvironmentTagName}-${ResourceName}
-        - ResourceName: Websocket
-      ProtocolType: WEBSOCKET
-      RouteSelectionExpression: $request.body.action
-  WebsocketStage:
-    Type: AWS::ApiGatewayV2::Stage
-    Properties:
-      ApiId: !Ref Websocket
-      StageName: !Ref EnvironmentAPIGatewayStageName
-      DeploymentId: !Ref WebsocketDeployment
-  WebsocketDeployment:
-    Type: AWS::ApiGatewayV2::Deployment
-    Properties:
-      ApiId: !Ref Websocket
-    DependsOn:
-      - WebsocketRoutetest
-  WebsocketRoutetest:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref Websocket
-      RouteKey: test
-      Target: !Sub integrations/${WebsocketRoutetestIntegration}
-      OperationName: echo-value
-  WebsocketRoutetestResponse:
-    Type: AWS::ApiGatewayV2::RouteResponse
-    Properties:
-      ApiId: !Ref Websocket
-      RouteId: !Ref WebsocketRoutetest
-      RouteResponseKey: $default
   Function:
     Type: AWS::Serverless::Function
     Properties:
@@ -52,25 +16,61 @@ Resources:
       Tracing: Active
       Policies:
         - AWSXrayWriteOnlyAccess
-  WebsocketRoutetestIntegration:
+  wssblog:
+    Type: AWS::ApiGatewayV2::Api
+    Properties:
+      Description: !Sub
+        - ${ResourceName} From Stack ${StackTagName} Environment ${EnvironmentTagName}
+        - ResourceName: wssblog
+      Name: !Sub
+        - ${StackTagName}-${EnvironmentTagName}-${ResourceName}
+        - ResourceName: wssblog
+      ProtocolType: WEBSOCKET
+      RouteSelectionExpression: $request.body.action
+  wssblogDeployment:
+    Type: AWS::ApiGatewayV2::Deployment
+    Properties:
+      ApiId: !Ref wssblog
+    DependsOn:
+      - wssblogRoutetest
+  wssblogStage:
+    Type: AWS::ApiGatewayV2::Stage
+    Properties:
+      ApiId: !Ref wssblog
+      StageName: !Ref EnvironmentAPIGatewayStageName
+      DeploymentId: !Ref wssblogDeployment
+  wssblogRoutetestIntegration:
     Type: AWS::ApiGatewayV2::Integration
     Properties:
-      ApiId: !Ref Websocket
+      ApiId: !Ref wssblog
       IntegrationType: AWS_PROXY
       IntegrationUri: !Sub arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${Function.Arn}/invocations
-  WebsocketRoutetestIntegrationPermission:
+  wssblogRoutetestIntegrationResponse:
+    Type: AWS::ApiGatewayV2::IntegrationResponse
+    Properties:
+      ApiId: !Ref wssblog
+      IntegrationId: !Ref wssblogRoutetestIntegration
+      IntegrationResponseKey: $default
+  wssblogRoutetestIntegrationPermission:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
       FunctionName: !Ref Function
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub arn:${AWS::Partition}:execute-api:${AWS::Region}:${AWS::AccountId}:${Websocket}/*/test
-  WebsocketRoutetestIntegrationResponse:
-    Type: AWS::ApiGatewayV2::IntegrationResponse
+      SourceArn: !Sub arn:${AWS::Partition}:execute-api:${AWS::Region}:${AWS::AccountId}:${wssblog}/*/test
+  wssblogRoutetest:
+    Type: AWS::ApiGatewayV2::Route
     Properties:
-      ApiId: !Ref Websocket
-      IntegrationId: !Ref WebsocketRoutetestIntegration
-      IntegrationResponseKey: $default
+      ApiId: !Ref wssblog
+      RouteKey: test
+      Target: !Sub integrations/${wssblogRoutetestIntegration}
+      OperationName: echo-value
+  wssblogRoutetestResponse:
+    Type: AWS::ApiGatewayV2::RouteResponse
+    Properties:
+      ApiId: !Ref wssblog
+      RouteId: !Ref wssblogRoutetest
+      RouteResponseKey: $default
 Parameters:
   StackTagName:
     Type: String
